[Fix] Added support for additional separator